--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>Source: <a href="https://docs.google.com/spreadsheets/d/1vYJxVshYhUB252pUexukKD-KcFi6mqFsbbw3BfywOC4/">Google Sheets</a></p>
 	<p id="wordcount"></p>
 	<hr>
-	<p>This conlang is published under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
+	<p>This conlang is under the license <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
 </div>
 
 <script src="js/letters.js"></script>
