--- a/word.html
+++ b/word.html
@@ -15,58 +15,8 @@
 	<h3 id="word">Word not found</h3>
 	<p id="type">n/a</p>
 	<p id="definition">Sorry, this word doesn't exist in Kagalarian!</p>
-	<table id="noun_declension" class="pfont" hidden><tbody>
-		<tr> <th id="declension_top" colspan="5">orðraðingpung fyrir...</th> </tr>
-		<tr> <th id="gender" rowspan="2">eigeinligr</th> <th colspan="2">einhlett</th> <th colspan="2">mákarhlett</th> </tr>
-		<tr> <th>óþærbúandi</th> <th>þærbúandi</th> <th>óþærbúandi</th> <th>þærbúandi</th> </tr>
-		<tr> <th>fyrstorð</th> <td id="n0"></td> <td id="n1"></td> <td id="n2"></td> <td id="n3"></td> </tr>
-		<tr> <th>tilorð</th> <td id="n4"></td> <td id="n5"></td> <td id="n6"></td> <td id="n7"></td> </tr>
-		<tr> <th>etirorð</th> <td id="n8"></td> <td id="n9"></td> <td id="n10"></td> <td id="n11"></td> </tr>
-		<tr> <th>ekkinorð</th> <td id="n12"></td> <td id="n13"></td> <td id="n14"></td> <td id="n15"></td> </tr>
-	</tbody></table>
-	<table id="noun_declension_mobile" class="pfont" hidden><tbody>
-		<tr> <th id="_declension_top" colspan="5">orðraðingpung fyrir...</th> </tr>
-		<tr> <th id="_gender" rowspan="2">eigeinligr</th> <th colspan="2">einhlett</th> </tr>
-		<tr> <th>óþærbúandi</th> <th>þærbúandi</th> </tr>
-		<tr> <th>fyrstorð</th> <td id="_n0"></td> <td id="_n1"></td> </tr>
-		<tr> <th>tilorð</th> <td id="_n4"></td> <td id="_n5"></td> </tr>
-		<tr> <th>etirorð</th> <td id="_n8"></td> <td id="_n9"></td> </tr>
-		<tr> <th>ekkinorð</th> <td id="_n12"></td> <td id="_n13"></td> </tr>
-		<tr> <th></th> <th colspan="2">mákarhlett</th> </tr>
-		<tr> <th>fyrstorð</th> <td id="_n2"></td> <td id="_n3"></td> </tr>
-		<tr> <th>tilorð</th> <td id="_n6"></td> <td id="_n7"></td> </tr>
-		<tr> <th>etirorð</th> <td id="_n10"></td> <td id="_n11"></td> </tr>
-		<tr> <th>ekkinorð</th> <td id="_n14"></td> <td id="_n15"></td> </tr>
-	</tbody></table>
-	<table id="verb_declension" class="pfont" hidden><tbody>
-		<tr> <th id="declension_top2" colspan="3">orðraðingpung fyrir...</th> </tr>
-		<tr> <th>fyrstorð</th> <td id="infinitive" colspan="2"></td> </tr>
-		<tr> <th>klepunorð</th> <td id="imperative" colspan="2"></td> </tr>
-		<tr> <th>núfabingorð</th> <td id="present_participle" colspan="2"></td> </tr>
-		<tr> <th>fyrfabingorð</th> <td id="past_participle" colspan="2"></td> </tr>
-		<tr> <th></th> <th>núligr</th> <th>fyrligr</th> </tr>
-		<tr> <th>ek, við</th> <td id="1st_present"></td> <td id="past_tense" rowspan="3"></td> </tr>
-		<tr> <th>þú, þé</th> <td id="2nd_present"></td> </tr>
-		<tr> <th>það, þetta<br>hann, hon<br>þey, þau, þaður</th> <td id="3rd_present"></td> </tr>
-		<tr> <th>nafnorð</th> <td id="gerund" colspan="2"></td> </tr>
-	</tbody></table>
-	<table id="adjective_declension" class="pfont" hidden><tbody>
-		<tr> <th id="adjective_top" colspan="3">orðraðingpung fyrir...</th> </tr>
-		<tr> <th></th> <th>óþærbúandi</th> <th>þærbúandi</th> </tr>
-		<tr> <th>rótorð</th> <td id="a0" colspan="2"></td> </tr>
-		<tr> <th>fyrr nafnorð</th> <td id="a1"></td> <td id="a2"></td> </tr>
-		<tr> <th>gærligr</th> <td id="a3"></td> <td id="a4"></td> </tr>
-		<tr> <th>ypanligr</th> <td id="a5"></td> <td id="a6"></td> </tr>
-		<tr> <th>verkhrimlingorð</th> <td id="a7"></td> <td id="a8"></td> </tr>
-		<tr> <th>nafnorð</th> <td id="a9"></td> <td id="a10"></td> </tr>
-	</tbody></table>
-	<br>
-	<table id="mediopassive_declension" class="pfont" hidden><tbody>
-		<tr> <th id="mediopassive_top" colspan="2">orðraðingpung fyrir...</th> </tr>
-		<tr> <th>fyrstorð</th> <td id="infinitive2"></td> </tr>
-		<tr> <th>núligr</th> <td id="present_tense2"></td> </tr>
-		<tr> <th>fyrligr</th> <td id="past_tense2"></td> </tr>
-	</tbody></table>
+	<hr>
+	<p>This conlang is under the license <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
 </div>
 
 <script src="js/letters.js"></script>
