--- a/letter.html
+++ b/letter.html
@@ -24,8 +24,8 @@
 	var params = new URLSearchParams(query);
 	var v = params.get("v");
 
-	document.getElementById("title").innerHTML = "Orðpængin um Oddarsku - " + v.toUpperCase() + " Orður";
-	document.getElementById("letter").innerHTML = "Runan " + v.toUpperCase();
+	document.getElementById("title").innerHTML = "Kagalarian Dictionary - " + v.toUpperCase() + " Orður";
+	document.getElementById("letter").innerHTML = "Letter " + v.toUpperCase();
 
 	var list = [];
 
