--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
 			<option value="suffix">ending with</option>
 		</select>
 		<br><br>
-		<label class="container pfont" style="margin-bottom: 20px;">Search declensions
+		<label class="container pfont" style="margin-bottom: 20px;">Search declensions (wip)
 			<input id="declensions" name="d" type="checkbox" checked="checked">
 			<span class="checkmark" style="border: 2px solid black;"></span>
 		</label>
