--- a/search.html
+++ b/search.html
@@ -31,7 +31,7 @@
 			<input id="declensions" name="d" type="checkbox" checked="checked">
 			<span class="checkmark" style="border: 2px solid black;"></span>
 		</label>
-		<input type="submit" class="submit pfont" value="Silfa" style="margin: 0;">
+		<input type="submit" class="submit pfont" value="Search" style="margin: 0;">
 	</form>
 	<h3 id="search"></h3>
 	<div id="results" class="list4 pfont"></div>
