--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<div id="letters" class="letterlist h2font"></div>
 	<hr>
 	<p>This is the official Kagalarian dictionary made by the creator! Kagalarian was the first conlang ever made by Neo. In fact, it started out as a relex. But after being called out that it wasn't a real conlang, Kagalarian has been remade.</p>
+	<p>Kagalarian was made for an unnamed world (called Fantasy in Kagalarian Space for now), where residents and citizens of the Empire of Kagalar speak it.</p>
 	<p>Source: <a href="https://docs.google.com/spreadsheets/d/1vYJxVshYhUB252pUexukKD-KcFi6mqFsbbw3BfywOC4/">Google Sheets</a></p>
 	<p id="wordcount"></p>
 	<hr>
