--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta name="author" content="Oneo64">
+	<meta name="description" content="Official dictionary for Kagalarian, a conlang created by Oneo64.">
+	<meta name="keywords" content="Kagalarian, conlang, constructed language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary">
+
 	<title>Kagalarian Dictionary</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
