--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="author" content="Oneo64">
 	<meta name="description" content="Official dictionary for Kagalarian, a conlang created by Oneo64 for the science fictional world Empires of the Cosmos.">
-	<meta name="keywords" content="Kagalarian, conlang, constructed language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary, Empires of the Cosmos">
+	<meta name="keywords" content="Kagalarian, conlang, constructed language, language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary, Empires of the Cosmos">
 
 	<title>Kagalarian Dictionary</title>
 	<link rel="stylesheet" href="style.css">
