--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<span class="titlespan"><img class="h1favicon" src="images/favicon.png" alt="favicon"><h1><a href="index.html">Kagalarian Dictionary</a></h1></span>
 	<div id="letters" class="letterlist h2font"></div>
 	<hr>
-	<p>This is the official Kagalarian dictionary made by the creator! Kagalarian was the first conlang ever made by Neo. In fact, it started out as a relex. But after being called out that it wasn't a real conlang, Kagalarian has been remade.</p>
+	<p>This is the official Kagalarian dictionary made by the creator! Kagalarian was the first conlang ever made by Oneo64. In fact, it started out as a relex. But after being called out that it wasn't a real conlang, Kagalarian has been remade.</p>
 	<p>Kagalarian was made for the worldbuilding project Empires of the Cosmos, where residents and citizens of the Kagalarian Empire speak it.</p>
 	<p>Source: <a href="https://docs.google.com/spreadsheets/d/1vYJxVshYhUB252pUexukKD-KcFi6mqFsbbw3BfywOC4/">Google Sheets</a></p>
 	<p id="wordcount"></p>
