--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="letters" class="letterlist h2font"></div>
 	<hr>
 	<p>This is the official Kagalarian dictionary created by Oneo64 for the worldbuilding project Empires of the Cosmos!</p>
-	<p>Kagalarian is the main language spoken by citizens of the Kagalarian Empire. Even though it doesn't belong to any specific language family, the closest real-world family is Slavic. Other than that, this language also takes inspiration from Norwegian, Hebrew, Arabic, and even Classical Latin.</p>
+	<p>Kagalarian is the main language spoken by citizens of the Kagalarian Empire. Although it doesn't belong to any specific language family, the closest real-world family is Slavic. Other than that, this language also takes inspiration from Norwegian, Hebrew, Arabic, and even Classical Latin.</p>
 	<p>Kagalarian was the first conlang ever made by Oneo64, starting as an attempt at a Germanic language, yet failing and becoming a relex of the English language. However, in recent times, Kagalarian has been revamped into a fully-fledged conlang.</p>
 	<p>Source: <a href="https://docs.google.com/spreadsheets/d/1vYJxVshYhUB252pUexukKD-KcFi6mqFsbbw3BfywOC4/">Google Sheets</a></p>
 	<p id="wordcount"></p>
