--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta name="author" content="Oneo64">
-	<meta name="description" content="Official dictionary for Kagalarian, a conlang created by Oneo64 for the science fictional world Empires of the Cosmos.">
-	<meta name="keywords" content="Kagalarian, conlang, constructed language, language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary, Empires of the Cosmos">
+	<meta name="description" content="Official dictionary for Kagalarian, a conlang created by Oneo64 for the science fictional world Starlattice.">
+	<meta name="keywords" content="Kagalarian, conlang, constructed language, language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary, Starlattice">
 
 	<title>Kagalarian Dictionary</title>
 	<link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 	<span class="titlespan"><img class="h1favicon" src="images/favicon.png" alt="favicon"><h1><a href="index.html">Kagalarian Dictionary</a></h1></span>
 	<div id="letters" class="letterlist h2font"></div>
 	<hr>
-	<p>This is the official Kagalarian dictionary created by Oneo64 for the worldbuilding project Empires of the Cosmos!</p>
+	<p>This is the official Kagalarian dictionary created by Oneo64 for the worldbuilding project Starlattice!</p>
 	<p>Kagalarian is the main language spoken by citizens of the Kagalarian Empire. Although it doesn't belong to any specific language family, the closest real-world family is Slavic. Other than that, this language also takes inspiration from Norwegian, Hebrew, Arabic, and even Classical Latin.</p>
 	<p>Kagalarian was the first conlang ever made by Oneo64, starting as an attempt at a Germanic language, yet failing and becoming a relex of the English language. However, in recent times, Kagalarian has been revamped into a fully-fledged conlang.</p>
 	<p>Kagalarian has a lot more Os and As than usual, for it is meant to sound powerful when spoken, while retaining its speakability. Many words in its lexicon end in -ol, -on, and -al. Kagalarian is usually spoken in the SOV word order, but SVO is sometimes accepted.</p>
@@ -60,7 +60,7 @@
 		"@type": "Person",
 		"name": "Oneo64"
 	},
-	"about": "Kagalarian is a constructed language created for the worldbuilding project Empires of the Cosmos.",
+	"about": "Kagalarian is a constructed language created for the worldbuilding project Starlattice.",
 	"inLanguage": "English"
 }
 </script>
