--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<span class="titlespan"><img class="h1favicon" src="images/favicon.png" alt="favicon"><h1><a href="index.html">Kagalarian Dictionary</a></h1></span>
 	<div id="letters" class="letterlist h2font"></div>
 	<hr>
-	<p>This is the official Kagalarian dictionary created by Oneo64 for the worldbuilding project Starlattice!</p>
+	<p>This is the official Kagalarian dictionary created by Oneo64 for the worldbuilding project <a href="https://github.com/Oneo64/Starlattice">Starlattice</a>!</p>
 	<p>Kagalarian is the main language spoken by citizens of the Kagalarian Empire. Although it doesn't belong to any specific language family, the closest real-world family is Slavic. Other than that, this language also takes inspiration from Norwegian, Hebrew, Arabic, and even Classical Latin.</p>
 	<p>Kagalarian was the first conlang ever made by Oneo64, starting as an attempt at a Germanic language, yet failing and becoming a relex of the English language. However, in recent times, Kagalarian has been revamped into a fully-fledged conlang.</p>
 	<p>Kagalarian has a lot more Os and As than usual, for it is meant to sound powerful when spoken, while retaining its speakability. Many words in its lexicon end in -ol, -on, and -al. Kagalarian is usually spoken in the SOV word order, but SVO is sometimes accepted.</p>
