--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Official dictionary for Kagalarian, a conlang created by Oneo64 for the science fictional world Starlattice.">
 	<meta name="keywords" content="Kagalarian, conlang, constructed language, language, Kagalar, Empire of Kagalar, Kagalarian Empire, Oneo64, dictionary, Starlattice">
 
+	<meta name="google-site-verification" content="4sL6DdO1HuqBzyt0lENLYBgJgt-7jJ1TudtxJph_xJY" />
+
 	<title>Kagalarian Dictionary</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
